--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container">
         <div class="col-md-6 mt-5">
-            <h2 class="border">Convert MS Excel to Json Data</h2>
+            <h2 class="p-2 border rounded">Convert MS Excel to Json Data</h2>
             <div class="d-flex">
                 <input class="form-control" type="file" id="xlfile" accept=".xls,.xlsx" >
                 <button class="btn btn-info" id="submit">Convert</button>
